# chess_parser

./: Cargo.toml  Makefile  Readme.md
examples/: fisher_spassky.chess  invalid.chess  invalid2.chess  invalid3.chess  invalid4.chess  invalid5.chess  invalid6.chess  invalid7.chess  invalid8.chess  test.chess  topalov_kasparov.chess
src/: grammar.pest  lib.rs  main.rs
tests/: parser_tests.rs
